--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -18,8 +18,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/bkkaggle/pytorch-CycleGAN-and-pix2pix/blob/master/CycleGAN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,8 +28,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5VIGyIus8Vr7",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "5VIGyIus8Vr7"
       },
       "source": [
         "Take a look at the [repository](https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix) for more information"
@@ -38,8 +38,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7wNjDKdQy35h",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "7wNjDKdQy35h"
       },
       "source": [
         "# Install"
@@ -47,49 +47,50 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "TRm-USlsHgEV",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "TRm-USlsHgEV"
       },
+      "outputs": [],
       "source": [
         "!git clone https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "Pt3igws3eiVp",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "Pt3igws3eiVp"
       },
+      "outputs": [],
       "source": [
         "import os\n",
         "os.chdir('pytorch-CycleGAN-and-pix2pix/')"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "z1EySlOXwwoa",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!pip install -r requirements.txt"
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "evalue": "Error: Activating Python 2.7.13 64-bit to run Jupyter failed with Error: Command failed: . /home/anthonyquantum/anaconda3/bin/activate && echo 'e8b39361-0157-4923-80e1-22d70d46dee6' && python /home/anthonyquantum/.vscode/extensions/ms-python.python-2019.11.50794/pythonFiles/printEnvVariables.py\n/home/anthonyquantum/anaconda3/bin/activate: line 5: /root/anaconda3/etc/profile.d/conda.sh: Permission denied\n.",
+          "output_type": "error"
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "!pip3 install -r requirements.txt"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8daqlgVhw29P",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "8daqlgVhw29P"
       },
       "source": [
         "# Datasets\n",
@@ -106,22 +107,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "vrdOettJxaCc",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "vrdOettJxaCc"
       },
+      "outputs": [],
       "source": [
         "!bash ./datasets/download_cyclegan_dataset.sh horse2zebra"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gdUz4116xhpm",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "gdUz4116xhpm"
       },
       "source": [
         "# Pretrained models\n",
@@ -135,22 +136,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "B75UqtKhxznS",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "B75UqtKhxznS"
       },
+      "outputs": [],
       "source": [
         "!bash ./scripts/download_cyclegan_model.sh horse2zebra"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yFw1kDQBx3LN",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "yFw1kDQBx3LN"
       },
       "source": [
         "# Training\n",
@@ -166,22 +167,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "0sp7TCT2x9dB",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "0sp7TCT2x9dB"
       },
+      "outputs": [],
       "source": [
         "!python train.py --dataroot ./datasets/horse2zebra --name horse2zebra --model cycle_gan"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9UkcaFZiyASl",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "9UkcaFZiyASl"
       },
       "source": [
         "# Testing\n",
@@ -198,22 +199,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "uCsKkEq0yGh0",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "uCsKkEq0yGh0"
       },
+      "outputs": [],
       "source": [
         "!python test.py --dataroot datasets/horse2zebra/testA --name horse2zebra_pretrained --model test --no_dropout"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OzSKIPUByfiN",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "OzSKIPUByfiN"
       },
       "source": [
         "# Visualize"
@@ -221,35 +222,35 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "9Mgg8raPyizq",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "9Mgg8raPyizq"
       },
+      "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
         "img = plt.imread('./results/horse2zebra_pretrained/test_latest/images/n02381460_1010_fake.png')\n",
         "plt.imshow(img)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "0G3oVH9DyqLQ",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "0G3oVH9DyqLQ"
       },
+      "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
         "img = plt.imread('./results/horse2zebra_pretrained/test_latest/images/n02381460_1010_real.png')\n",
         "plt.imshow(img)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     }
   ]
 }
